fix after code review
* prevent horizontal scrolling
* images match for design now

--- a/src/styles/atomic.css
+++ b/src/styles/atomic.css
@@ -245,3 +245,7 @@
 .ol-n {
   outline: none;
 }
+
+.ovx-h {
+  overflow-x: hidden;
+}
