--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -89,6 +89,13 @@
   font-size: 14px;
 }
 
+.section-image {
+  width: 540px;
+  height: 405px;
+
+  filter: drop-shadow(0 16px 32px rgba(0, 0, 0, 0.15));
+}
+
 .send-button::before {
   width: 24px;
   height: 24px;
@@ -102,4 +109,6 @@
   margin-bottom: -200px;
 
   border: 0;
+
+  filter: drop-shadow(0 16px 32px rgba(0, 0, 0, 0.15));
 }
